Setting memory consumption for test execution
Signed-off-by: Johannes Thönes <johannes.thoenes@googlemail.com>