@@ -550,7 +550,8 @@
                 <configuration>
                     <excludes>
                         <exclude>**/ui/*Test.java</exclude>
-                    </excludes>
+	            </excludes>
+		    <argLine>-Xms256m -Xmx512m -XX:PermSize=512m</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -564,6 +565,7 @@
                             <includes>
                                 <include>**/ui/*Test.java</include>
                             </includes>
+          		    <argLine>-Xms256m -Xmx512m -XX:PermSize=512m</argLine>
                         </configuration>
                     </execution>
                 </executions>
